--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-latest-version": "^1.0.16",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-places-autocomplete": "^6.1.3",
     "react-scripts": "1.1.4"
   },
   "scripts": {
