--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.0.0",
+    "google-maps-react": "^2.0.0",
     "node-latest-version": "^1.0.16",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
